# loomcycle

./: .dockerignore  .env.example  .env.insecure.example  .env.local.example  .gitignore  .goreleaser.yaml  BACKERS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Dockerfile.toolbox  LICENSE  Makefile  README.md  REVISIONS.md  docker-compose.cluster.yaml  docker-compose.example.yaml  go.mod  go.sum  loomcycle-mcp.sh  loomcycle.example.yaml  loomcycle.local-interactive.example.yaml  loomcycle.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  publish-explorer.yml  publish-library.yml  publish-python-adapter.yml  publish-ts-adapter.yml  release.yml
adapters/python/: README.md  pyproject.toml
adapters/python/loomcycle/: __init__.py  client.py  errors.py  events.py
adapters/python/loomcycle/_generated/: loomcycle_pb2.py  loomcycle_pb2_grpc.py
adapters/python/tests/: test_channels_grpc.py  test_drive_stream.py  test_errors.py  test_event_host_widening.py  test_events.py  test_helpers.py  test_hooks.py  test_interactive_grpc.py  test_path_document_grpc.py  test_pause_snapshot_client.py  test_pause_snapshot_errors.py  test_run_mutation_grpc.py  test_run_request_fields.py  test_substrate_client.py  test_substrate_defs_grpc.py
adapters/ts/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  vitest.config.ts
bench/: README.md  doc.go
bench/agents/: low-tier-eval.md  middle-tier-eval.md
bundles/agent-teams/: README.md  loomcycle.yaml
bundles/chat/: README.md  loomcycle.yaml
bundles/doc-colorizer/: README.md  loomcycle.yaml
bundles/document-agent/: README.md  loomcycle.yaml  loomcycle_oauth.yaml
bundles/memory/: loomcycle.yaml
bundles/sandbox/: README.md  loomcycle.yaml
bundles/team-examples/: README.md
cmd/loomcycle/: alias_test.go  autodiscover.go  autodiscover_test.go  main.go  main_test.go  presets_integration_test.go  presets_memory_test.go  providers_p1_test.go  providers_p2a_test.go  providers_review_fixes_test.go
deploy/builder/: .gitignore  Dockerfile  Dockerfile.docker  INSTALL.md  README.md  config.go  config_test.go  engine.go  engine_test.go  go.mod  main.go  mcp.go  mcp_test.go  p2b_test.go  session.go  session_test.go  tools.go  tools_test.go  workspace_test.go
deploy/truenas/: INSTALL.md  README.md  docker-compose.yaml  loomcycle.overlay.example.yaml
docs/: ARCHITECTURE.md  CLAUDE-CODE.md  CLUSTER-QUICKSTART.md  CONFIGURATION.md  CREDENTIALS.md  CUSTOMIZING_AGENTS.md  DOCKER_HUB_OVERVIEW.md  DOCUMENTS.md  GRPC.md  HISTORY.md  MCP_INTEGRATION.md  MCP_SERVER.md  MEMORY-BACKENDS.md  MULTI-REPLICA.md  PATH.md  PLAN.md  POSTGRES.md  PROVIDERS.md  SANDBOX.md  SEARCH.md  SQL_MEMORY.md  TOOLBOX_IMAGE.md  TOOLS.md  TRUENAS.md  architecture-cluster.d2  architecture-connector.d2  architecture.d2
examples/: README.md
examples/cluster/: .env.example  README.md  loomcycle.yaml  nginx.conf  run-agents.sh  verify.sh
examples/exp1-tools-usage/: .env.local.example  README.md  loomcycle.yaml  run.sh
examples/exp10-gbash-bench/: loomcycle.yaml  run.sh
examples/exp2-interruption/: .env.local.example  .gitignore  README.md  loomcurl.sh  loomcycle.yaml  run.sh
examples/exp3-multiagent-loop/: .env.local.example  README.md  loomcycle.yaml  run.sh
examples/exp4-gitea-telegram/: .env.local.example  README.md  gitcreds.sh  giteapi.sh  loomcycle.yaml  run.sh
examples/exp5-scheduler-pipeline/: .env.local.example  .gitignore  README.md  loomcycle.yaml  run.sh
examples/exp6-self-evolving-agents/: .env.local.example  .gitignore  README.md  loomcycle.yaml  run.sh
examples/exp6.8-local-evolution/: .env.local.example  README.md  loomcycle.yaml  run.sh
examples/exp7-code-review-fanout/: .env.local.example  .gitignore  README.md  loomcycle.yaml  run.sh
examples/exp8-ephemeral-volume-review/: .env.local.example  .gitignore  README.md  loomcycle.yaml  run.sh
examples/exp9-prime-sql-memory/: .env.local.example  loomcycle.yaml  run.sh
examples/exp9-prime-sql-memory-static/: loomcycle.yaml  primes.py  run.sh
examples/observability/: README.md
examples/python-cli/: README.md  main.py
internal/a2a/: auth.go  auth_test.go  events.go  events_test.go  executor.go  executor_interruption_test.go  executor_test.go  growth_test.go  interruption.go  interruption_test.go  resume_answer_test.go  statemap.go  statemap_test.go  task_store.go  task_store_test.go  tenant_test.go
internal/agents/: loader.go  loader_test.go  sign.go  sign_test.go  validate.go  validate_test.go
internal/audit/: audit.go  audit_test.go
internal/auth/: bearer.go  bearer_test.go  declared.go  declared_test.go  principal.go  principal_test.go  scopes.go  scopes_test.go  token.go  token_test.go
internal/cancel/: registry.go  registry_test.go
internal/channels/: bus.go  bus_cluster_test.go  bus_test.go  heartbeat.go  heartbeat_test.go  scheduler.go  scheduler_test.go  system.go  system_test.go
internal/claudeimport/: agent.go  agent_test.go  frontmatter.go  frontmatter_test.go  mcp.go  mcp_test.go  recipe_emit.go  recipe_emit_test.go  report.go  skill.go  skill_test.go  walker.go  walker_test.go
internal/cli/: agents.go  agents_test.go  anthropic.go  anthropic_status_test.go  authenv.go  authenv_test.go  cli.go  doctor.go  doctor_adapters.go  doctor_test.go  drivers_test.go  hash.go  hash_test.go  health.go  health_test.go  import.go  import_test.go  init.go  init_test.go  loadcfg.go  loadcfg_test.go  mcp_install.go  mcp_install_test.go  mcp_registry.go  mcp_registry_test.go  memory_eval.go  migrate.go  migrate_sqlite.go  migrate_sqlite_test.go  migrate_test.go  operator_token.go  pause.go  pause_test.go  presets.go  presets_test.go  secrets_test.go  snapshot.go  snapshot_test.go  truenas.go  truenas_test.go  (+3 more)
internal/clienttools/: frames.go  registry.go  registry_test.go  tool.go  tool_test.go
internal/concurrency/: peruser_race_test.go  provider_gates.go  provider_gates_test.go  semaphore.go  (+1 more)
proto/: loomcycle.proto
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+1245 files in other folders)
