# Python adapter for loomcycle's gRPC surface.
#
# Build / publish:
#
#   cd adapters/python
#   python3 -m venv .venv
#   . .venv/bin/activate
#   pip install -e ".[dev]"
#   make -C ../.. python-proto    # regenerate _generated/*.py from proto
#   pytest
#
# Publish (CI on tag):
#   pip install build twine
#   python -m build
#   twine upload dist/*

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loomcycle"
version = "0.6.0"
description = "Async Python client for loomcycle's gRPC API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Dennis Gubsky" }]
keywords = ["llm", "agent", "loomcycle", "grpc", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# grpcio floor matches the GRPC_GENERATED_VERSION baked into the
# committed _generated/loomcycle_pb2_grpc.py stubs (1.80.0). The
# generated module raises RuntimeError at import time on lower
# versions, so the pip-resolver dependency must mirror that.
# Re-run `make python-proto` if you need to regenerate against an
# older grpcio.
dependencies = [
    "grpcio >= 1.80.0",
    "protobuf >= 5.0.0, < 7.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools >= 1.80.0",
    "pytest >= 7.4",
    "pytest-asyncio >= 0.23",
]

[project.urls]
Homepage = "https://github.com/denn-gubsky/loomcycle"
Repository = "https://github.com/denn-gubsky/loomcycle"
Issues = "https://github.com/denn-gubsky/loomcycle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["loomcycle*"]

[tool.setuptools.package-data]
loomcycle = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
